# Nova

./: .gitignore  Architecture.md  Cargo.toml  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  env.example  mcp-instructions.md
.github/workflows/: ci.yml
quark-webhook/: next.config.ts  package.json  pnpm-lock.yaml
quark-webhook/src/app/: layout.tsx
quark-webhook/src/aptos/: client.ts
quark-webhook/src/config/: env.ts
quark-webhook/src/context/: AgentProvider.tsx  ChainProvider.tsx  WalletProvider.tsx
quark_bot/: Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.dev  Dockerfile.lldb
quark_bot/src/: callbacks.rs  dependencies.rs  main.rs  utils.rs
quark_bot/src/ai/: actions.rs  dto.rs  handler.rs  mod.rs  tools.rs
quark_bot/src/announcement/: handler.rs
quark_bot/src/aptos/: handler.rs
quark_bot/src/assets/: handler.rs  media_aggregator.rs
quark_bot/src/bot/: answers.rs  handler.rs  handler_tree.rs
quark_bot/src/command_settings/: handler.rs
quark_bot/src/credentials/: dto.rs  handler.rs
quark_bot/src/dao/: handler.rs
quark_bot/src/filters/: dto.rs  handler.rs  helpers.rs
quark_bot/src/group/: dto.rs  handler.rs
quark_bot/src/job/: handler.rs  job_scheduler.rs
quark_bot/src/migrations/: mod.rs  schedule_payments.rs  schedule_prompts.rs
quark_bot/src/scheduled_payments/: callbacks.rs  dto.rs  handler.rs  helpers.rs  runner.rs  (+1 more)
quark_consumer/src/: main.rs
quark_server/: Cargo.toml
quark_server/src/: main.rs  router.rs  state.rs
scripts/: Cargo.toml
scripts/src/: encrypt.rs  lib.rs  main.rs
(+24 files in other folders)
