[package]
name = "quark-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quark-scripts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-cloud-storage = "0.24"
dotenvy = "0.15"
google-cloud-default = "0.4"
getopts = "0.2"
cloud-storage = "0.11"
rsa = "0.9"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"